added a guide and improved visuals

--- a/style.css
+++ b/style.css
@@ -8,13 +8,99 @@
     src: url(TF2Build.ttf);
 }
 
+h1{
+    font-family: teamfortessbuild;
+    margin-top: 0;
+}
+
 body{
     font-family: teamfortess;
-    color: rgb(0, 0, 0);
-    background-color: #ddbd9c;
-    font-size: larger;
+    color: rgb(39, 39, 39);
+    background-color: #2e2a28;
+    font-size: x-large;
+    background-image: url('https://steamcdn-a.akamaihd.net/apps/tf2/blog/images/class_repeat_bg.jpg');
+    background-repeat: repeat-y;
+    background-position: center;
+    margin: 0;
+}
+
+pre{
+    font-family: teamfortess;
+    color: rgb(255, 255, 255);
+    background-color: #3d3849;
+    font-size: x-large;
 }
 
 a{
-    color:rgb(45, 122, 49);
+    color:rgb(54, 147, 175);
+    font-weight: 600;
+}
+
+button{
+    font-family: teamfortess;
+    font-size: x-large;
+    background-color: #ff7732;
+    border-width: 2px;
+    border-style: ridge;
+    border-color: #c49c88;
+    border-radius: 5px;
+    transition: .2s ease;
+}
+button:hover{
+    background-color: #ffb894;
+}
+
+.middle{
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 984px;
+    background-color: #cccabf;
+    background-image: url(background.png);
+    background-repeat: repeat;
+    min-height: 1023px;
+    border-width: 3px;
+    border-color: #a19884;
+    border-style: solid;
+}
+
+.note {
+    border: 2px;
+    border-style: dashed;
+    border-color: #fffd6b;
+    background-color: #e9df98;
+    padding: 10px;
+    margin-right: auto;
+    border-radius: 15px;
+}
+
+.home{
+    min-width: 2.5cm;
+    max-width: 3cm;
+    width: 10%;
+    position: fixed;
+    top: 0;
+    opacity: 50%;
+    transition: .5s ease;
+}
+
+.home:hover {
+    transition: .5s ease;
+    opacity: 100%;
+}
+
+.footer{
+    background-image: url('https://steamcdn-a.akamaihd.net/apps/tf2/blog/images/sp_bottom_bg.jpg');
+  background-repeat: no-repeat;
+  background-position: top center;
+  text-align: center;
+  height: 218px;
+}
+
+.brickstop{
+    background-image: url('https://steamcdn-a.akamaihd.net/apps/tf2/blog/images/class_top_bg.jpg');
+  background-repeat: no-repeat;
+  background-position: top center;
+  text-align: center;
+  min-height: 1023px;
 }
