i forgot to save this file, rookie mistake

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button:hover{
     margin-right: auto;
     max-width: 984px;
     background-color: #cccabf;
-    background-image: url(background.png);
+    background-image: url(Paper002.jpg);
     background-repeat: repeat;
     min-height: 1023px;
     border-width: 3px;
